<resources>
    <string name="app_name">Android_DoAn</string>
    <string name="navigation_drawer_open">Open</string>
    <string name="navigation_drawer_close">Close</string>

    <!--    common-->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="success">Thành công</string>
    <string name="edit">Sửa</string>
    <string name="save">Lưu</string>
    <string name="update">Cập nhật</string>
    <string name="delete">Xoá</string>
    <string name="more_options">More options</string>
    <string name="all">Tất cả</string>
    <string name="view_all">Xem tất cả</string>
    <string name="see_more">Xem thêm</string>
    <string name="collapse">Thu gọn</string>
    <string name="filter">Lọc</string>
    <string name="sign_in_your_account">Sign in your account</string>
    <string name="email">Email</string>
    <string name="email_hint">ex: lkhai4617@gmail.com</string>
    <string name="password">Mật khẩu</string>
    <string name="password_hint">********</string>
    <string name="sign_in">SIGN IN</string>
    <string name="or_sign_in_with">or sign in with</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="sign_up">SIGN UP</string>
    <string name="create_your_account">Create your account</string>
    <string name="name">Name</string>
    <string name="ex_john_smith">ex: john smith</string>
    <string name="confirm_password">Confirm password</string>
    <string name="sign_up_with">sign up with</string>
    <string name="have_an_account">Have an account?</string>
    <string name="gender">Giới tính</string>
    <string name="home">Trang chủ</string>
    <string name="search">Tìm kiếm</string>
    <string name="cart">Giỏ hàng</string>
    <string name="profile">Tài khoản</string>
    <string name="hello">Xin chào,</string>
    <string name="product">Sản phẩm</string>
    <string name="asus_vivobook">Asus Vivobook</string>
    <string name="ex_price">17000000</string>
    <string name="unit_money">VNĐ</string>
    <string name="sold">Đã bán:</string>
    <string name="int_example">20</string>
    <string name="ex_rating">4.5</string>
    <string name="ex_quantity_review">(20 Đánh giá)</string>
    <string name="description">Mô tả sản phẩm</string>
    <string name="specification">Thông số kỹ thuật</string>
    <string name="cpu">Công nghệ CPU:</string>
    <string name="color">Màu sắc:</string>
    <string name="gpu">Card đồ họa:</string>
    <string name="rom">Bộ nhớ trong:</string>
    <string name="ram">Bộ nhớ ngoài:</string>
    <string name="other">Khác:</string>
    <string name="buy_now">Mua ngay</string>
    <string name="add_to_cart">Thêm vào giỏ hàng</string>
    <string name="product_detail">Chi tiết sản phẩm</string>
    <string name="payment">THANH TOÁN</string>
    <string name="total">Tổng cộng:</string>
    <string name="discount_input">Nhập mã ưu đãi</string>
    <string name="remove">Xoá khỏi giỏ hàng</string>
    <string name="add_to_favourite">Thêm vào yêu thích</string>
    <string name="recipient_information">Thông tin người nhận</string>
    <string name="ex_address">999 Trần Hoàng Na, Hưng Lợi, Ninh Kiều, Cần Thơ, Việt Nam</string>
    <string name="change">Thay đổi</string>
    <string name="online">Thanh toán online</string>
    <string name="cash">Thanh toán khi nhận hàng</string>
    <string name="place_order">Đặt hàng</string>
    <string name="cancel">Hủy</string>
    <string name="receiver_name">Tên người nhận</string>
    <string name="receiver_input">Nhập tên người nhận</string>
    <string name="phone">Số điện thoại</string>
    <string name="phone_input">Nhập số điện thoại</string>
    <string name="detail_address">Địa chỉ chi tiết</string>
    <string name="detail_address_input">Nhập địa chỉ chi tiết</string>
    <string name="order_success_title">Đặt hàng thành công!</string>
    <string name="order_success_description">Đơn hàng của  bạn sẽ được giao đến sớm.\n Cảm ơn bạn đã chọn ứng dụng của chúng tôi."</string>
    <string name="continue_shopping">Tiếp tục mua sắm</string>
    <string name="checkout">Thanh toán</string>
    <string name="orders">Đơn hàng</string>
    <string name="shipping_address">Địa chỉ nhận hàng</string>
    <string name="payment_method">Phương thức thanh toán</string>
    <string name="settings">Cài đặt</string>
    <string name="logout">Đăng xuất</string>
    <string name="pending">Đang chờ</string>
    <string name="shipping">Đang giao</string>
    <string name="completed">Đã giao</string>
    <string name="canceled">Đã hủy</string>
    <string name="id">1</string>
    <string name="ex_date">30-3-2025</string>
    <string name="order_id">Mã đơn hàng:</string>
    <string name="quantity">Số lượng:</string>
    <string name="detail">Chi tiết</string>
    <string name="low_to_high">Giá: Thấp đến cao</string>
    <string name="order_history">Lịch sử đơn hàng</string>
    <string name="ex_shipping_method">FedEx, 3 ngày, 15$</string>
    <string name="ex_discount">10%, Khuyến mãi</string>
    <string name="order_info">Thông tin đơn hàng</string>
    <string name="discount">Ưu đãi</string>
    <string name="shipping_method">Phương thức vận chuyển</string>
    <string name="ex_quantity_product">2 sản phẩm</string>
    <string name="ex_order_id">Đơn hàng 1</string>
    <string name="ex_category">Gamming</string>
    <string name="ex_product_id">12Ne1233e1</string>
    <string name="order_detail">Chi tiết đơn hàng</string>
    <string name="full_name">Họ và tên</string>
    <string name="input_full_name">Nhập họ và tên</string>
    <string name="address">Địa chỉ</string>
    <string name="input_address">Nhập địa chỉ</string>
    <string name="birthday">Ngày sinh</string>
    <string name="ex_birthday">VD: 12/12/2000</string>
    <string name="input_phone">Nhập số điện thoại</string>
    <string name="input_shipping_address">Nhập địa chỉ nhận hàng</string>
    <string name="notification">Thông báo</string>
    <string name="voucher">Ưu đãi</string>
    <string name="new_product">Sản phẩm mới</string>
    <string name="order_status_change">Thay đổi trạng thái giao hàng</string>
    <string name="user_info">Thông tin tài khoản</string>
    <string name="change_password">Đổi mật khẩu</string>
    <string name="old_password">Mật khẩu cũ</string>
    <string name="new_password">Mật khẩu mới</string>
    <string name="confirm_new_password">Xác nhận mật khẩu mới</string>
    <string name="save_password">LƯU MẬT KHẨU</string>
    <string name="dashboard">Dashboard</string>
    <string name="statistic">Thống kê</string>
    <string name="product_management">Quản lí sản phẩm</string>
    <string name="category_management">Quản lí phân loại</string>
    <string name="brand_management">Quản lí hãng</string>
    <string name="customer_management">Quản lí người dùng</string>
    <string name="management_order">Quản lí đơn hàng</string>
    <string name="order_status">Trạng thái đơn hàng</string>
    <string name="code">Code</string>
    <string name="add_new_address">Thêm địa chỉ</string>
    <string name="hint_name">Le Minh Khai</string>
    <string name="hint_phone">01234409239</string>
    <string name="hint_address">28 Hoang Dieu 2</string>
    <string name="address_default">Mặc định</string>
    <string name="hint_recipient_name">Tên người nhận</string>
    <string name="hint_street">Đường</string>
    <string name="hint_ward">Phường</string>
    <string name="hint_district">Quận</string>
    <string name="hint_city">Thành phố</string>
    <string name="update_order_status">Cập nhật trạng thái</string>
    <string name="clear_filter">Refresh</string>
    <string name="empty">Trống</string>
    <string name="admin_page">Trang quản trị</string>
    <string name="list_product">Danh sách sản phẩm</string>
    <string name="create_order">Tạo đơn hàng</string>
    <string name="user">Người dùng</string>

</resources>