<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item android:id="@+id/action_home"
            android:title="@string/home"
            android:icon="@drawable/ic_home"/>

        <item android:id="@+id/orderFragment"
            android:title="@string/management_order"
            android:icon="@drawable/ic_order"/>

        <item android:id="@+id/productManagementFragment"
            android:title="@string/product_management"
            android:icon="@drawable/ic_product"/>

        <item android:id="@+id/categoryManagementFragment"
            android:title="@string/category_management"
            android:icon="@drawable/ic_categories"/>

        <item android:id="@+id/brandManagementFragment"
            android:title="@string/brand_management"
            android:icon="@drawable/ic_factory"/>

        <item android:id="@+id/userManagementFragment"
            android:title="@string/customer_management"
            android:icon="@drawable/ic_user"/>

        <item android:id="@+id/statisticFragment"
            android:title="@string/statistic"
            android:icon="@drawable/ic_product"/>
    </group>

    <group android:checkableBehavior="single">
        <item android:title="@string/profile">
            <menu>
                <item android:id="@+id/settingFragment"
                    android:title="@string/settings"
                    android:icon="@drawable/ic_setting"/>

                <item android:id="@+id/nav_logout"
                    android:title="@string/logout"
                    android:icon="@drawable/ic_logout"/>
            </menu>
        </item>

    </group>
</menu>