<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_second"
    tools:context=".view.fragment.UpdateOrderStatusFragment">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:textSize="18sp"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:padding="10dp"
            android:text="@string/order_status"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <RadioGroup
            android:id="@+id/radio_group"
            android:padding="10dp"
            android:background="@color/white"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RadioButton
                android:id="@+id/rbtn_pending"
                android:text="@string/pending"
                android:textSize="16sp"
                android:textColor="@color/black"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <RadioButton
                android:id="@+id/rbtn_shipping"
                android:text="@string/shipping"
                android:textSize="16sp"
                android:textColor="@color/black"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <RadioButton
                android:id="@+id/rbtn_completed"
                android:text="@string/completed"
                android:textSize="16sp"
                android:textColor="@color/black"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <RadioButton
                android:id="@+id/rbtn_canceled"
                android:text="@string/canceled"
                android:textSize="16sp"
                android:textColor="@color/black"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

        </RadioGroup>
        
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_save_changes"
            android:textColor="@color/white"
            android:backgroundTint="@color/bg_primary"
            android:layout_marginHorizontal="10dp"
            android:text="@string/update"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    </LinearLayout>

</FrameLayout>