<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".view.fragment.RegisterFragment">

    <LinearLayout
        android:orientation="vertical"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="50dp">

            <ImageButton
                android:src="@drawable/ic_back"
                android:background="@color/white"
                android:layout_width="50dp"
                android:layout_height="match_parent"/>

            <ImageView
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:src="@drawable/logo"
                android:layout_width="40dp"
                android:layout_height="40dp"/>
        </RelativeLayout>

        <TextView
            android:layout_marginTop="10dp"
            android:textStyle="bold"
            android:textSize="30sp"
            android:gravity="center"
            android:text="@string/create_your_account"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <RelativeLayout
            android:layout_marginTop="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/tv_name"
                android:textSize="20sp"
                android:textColor="@color/text_color"
                android:text="@string/name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <EditText
                android:id="@+id/edt_name"
                android:layout_marginTop="7dp"
                android:background="@drawable/edittext_background"
                android:hint="@string/ex_john_smith"
                android:inputType="textEmailAddress"
                android:layout_below="@+id/tv_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <TextView
                android:id="@+id/tv_gender"
                android:layout_marginTop="20dp"
                android:layout_below="@+id/edt_name"
                android:textSize="20sp"
                android:textColor="@color/text_color"
                android:text="@string/gender"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>


            <Spinner
                android:id="@+id/spinner_gender"
                android:layout_below="@id/tv_gender"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <TextView
                android:id="@+id/tv_email"
                android:layout_marginTop="20dp"
                android:layout_below="@+id/spinner_gender"
                android:textSize="20sp"
                android:textColor="@color/text_color"
                android:text="@string/email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <EditText
                android:id="@+id/edt_email"
                android:layout_marginTop="7dp"
                android:background="@drawable/edittext_background"
                android:hint="@string/email_hint"
                android:inputType="textEmailAddress"
                android:layout_below="@+id/tv_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <TextView
                android:id="@+id/tv_password"
                android:layout_marginTop="20dp"
                android:layout_below="@+id/edt_email"
                android:textSize="20sp"
                android:textColor="@color/text_color"
                android:text="@string/password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <EditText
                android:id="@+id/edt_password"
                android:layout_marginTop="7dp"
                android:background="@drawable/edittext_background"
                android:hint="@string/password_hint"
                android:inputType="textPassword"
                android:layout_below="@+id/tv_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <TextView
                android:id="@+id/tv_confirm_password"
                android:layout_marginTop="20dp"
                android:layout_below="@+id/edt_password"
                android:textSize="20sp"
                android:textColor="@color/text_color"
                android:text="@string/confirm_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <EditText
                android:id="@+id/edt_confirm_password"
                android:layout_marginTop="7dp"
                android:background="@drawable/edittext_background"
                android:hint="@string/password_hint"
                android:inputType="textPassword"
                android:layout_below="@+id/tv_confirm_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

        </RelativeLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_sign_up"
            android:textColor="@color/white"
            android:background="@drawable/button_background"
            android:layout_marginTop="30dp"
            android:text="@string/sign_up"
            android:backgroundTint="@null"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <TextView
            android:textColor="@color/text_color"
            android:layout_marginTop="10dp"
            android:layout_gravity="center_horizontal"
            android:textSize="20sp"
            android:text="@string/sign_up_with"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <RelativeLayout
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="30dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/tv_sign_up"
                android:textColor="@color/text_color"
                android:textSize="20sp"
                android:text="@string/have_an_account"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <TextView
                android:id="@+id/btn_sign_in"
                android:layout_toEndOf="@+id/tv_sign_up"
                android:textColor="@color/green"
                android:textSize="20sp"
                android:text="@string/sign_in"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

        </RelativeLayout>

    </LinearLayout>

</FrameLayout>