<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph_home"
    app:startDestination="@id/homeFragment">
    <fragment
        android:id="@+id/homeFragment"
        android:name="com.example.android_doan.view.fragment.HomeFragment"
        android:label="hom"
        tools:layout="@layout/fragment_home" >
        <action
            android:id="@+id/action_homeFragment_to_searchFragment"
            app:destination="@id/searchFragment" />
        <action
            android:id="@+id/action_homeFragment_to_productDetailFragment"
            app:destination="@id/productDetailFragment"
            app:popUpTo="@id/homeFragment"/>
<!--            app:popUpToInclusive="true"/>-->
    </fragment>
    <fragment
        android:id="@+id/searchFragment"
        android:name="com.example.android_doan.view.fragment.SearchFragment"
        android:label="@string/search"
        tools:layout="@layout/fragment_search" >
        <action
            android:id="@+id/action_searchFragment_to_cartFragment"
            app:destination="@id/cartFragment" />
    </fragment>
    <fragment
        android:id="@+id/cartFragment"
        android:name="com.example.android_doan.view.fragment.CartFragment"
        android:label="@string/cart"
        tools:layout="@layout/fragment_cart" >
        <action
            android:id="@+id/action_cartFragment_to_profileFragment"
            app:destination="@id/profileFragment" />
        <action
            android:id="@+id/action_cartFragment_to_checkoutFragment"
            app:destination="@id/checkoutFragment"
            app:popUpTo="@id/cartFragment"/>
    </fragment>
    <fragment
        android:id="@+id/profileFragment"
        android:name="com.example.android_doan.view.fragment.ProfileFragment"
        android:label="@string/profile"
        tools:layout="@layout/fragment_profile" />
    <fragment
        android:id="@+id/productDetailFragment"
        android:name="com.example.android_doan.view.fragment.ProductDetailFragment"
        android:label="@string/product_detail"
        tools:layout="@layout/fragment_product_detail" />
    <fragment
        android:id="@+id/checkoutFragment"
        android:name="com.example.android_doan.view.fragment.CheckoutFragment"
        android:label="@string/checkout"
        tools:layout="@layout/fragment_checkout" >
        <action
            android:id="@+id/action_checkoutFragment_to_orderSuccessFragment"
            app:destination="@id/orderSuccessFragment"
            app:popUpTo="@id/cartFragment"/>
    </fragment>
    <fragment
        android:id="@+id/orderSuccessFragment"
        android:name="com.example.android_doan.view.fragment.OrderSuccessFragment"
        android:label="@string/success"
        tools:layout="@layout/fragment_order_success" />
</navigation>