<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/bg_white_corner_15"
    android:elevation="5dp"
    android:layout_margin="10dp"
    android:orientation="vertical">

    <LinearLayout
        android:padding="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/tv_full_name"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:textSize="18sp"
            android:text="@string/hint_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <View
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="#000000"/>

        <TextView
            android:id="@+id/tv_num_phone"
            android:textColor="@color/text_color"
            android:textSize="18sp"
            android:text="@string/hint_phone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </LinearLayout>

    <TextView
        android:id="@+id/tv_address"
        android:paddingBottom="10dp"
        android:textColor="@color/text_color"
        android:textSize="18sp"
        android:text="@string/hint_address"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/tv_is_default"
        android:layout_gravity="end"
        android:textSize="18sp"
        android:textColor="@color/text_color"
        android:layout_marginBottom="10dp"
        android:layout_marginEnd="10dp"
        android:padding="5dp"
        android:background="@drawable/bg_border_red"
        android:layout_marginStart="10dp"
        android:text="@string/address_default"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

</LinearLayout>